<resources>
    <string name="app_name">Garaža</string>
    <string name="registracija">Registracija</string>
    <string name="napravite_racun_title">Napravite račun!</string>
    <string name="upis_imena">Upišite svoje ime...</string>
    <string name="upis_email">Upišite e-mail adresu...</string>
    <string name="upis_sifra">Upišite šifru...</string>
    <string name="potvrda_sifre">Potvrdite šifru...</string>
    <string name="button_registracija">Registriraj se!</string>
    <string name="prijava">Prijava</string>
    <string name="opis_prijave">Ako imate napravljen profil, stisnite gumb Prijava</string>
    <string name="opis_registracije">Ako nemate profil, možete ga napraviti pritiskom na gumb Registracija</string>
    <string name="contentDescription_slika">slika</string>
    <string name="odjava">Odjava</string>
    <string name="go_back_button">POVRATAK NATRAG</string>
    <string name="prva_garaza_tekst">GARAŽA ŠPANSKO</string>
    <string name="druga_garaza_tekst">GARAŽA JARUN</string>
    <string name="natrag">Natrag</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="treca_garaza_tekst">GARAŽA VOLTINO</string>
    <string name="lokacije_garaza">Lokacije garaža</string>
    <string name="adresa_prvaGaraza">Adresa: Antuna Šoljana 41, Zagreb</string>
    <string name="broj_mjesta_prvaGaraza">Ukupan broj mjesta: 67</string>
    <string name="slobodna_mjesta_prvaGaraza">Broj slobodnih mjesta: 50</string>
    <string name="temp_prvaGaraza">Temperatura: 19</string>
    <string name="adresa_drugaGaraza">Adresa: Ulica Hrvatskog sokola, Zagreb</string>
    <string name="broj_mjesta_drugaGaraza">Ukupan broj mjesta: 45</string>
    <string name="slobodna_mjesta_drugaGaraza">Broj slobodnih mjesta: 31</string>
    <string name="temp_drugaGaraza">Temperatura: 22</string>
    <string name="vlaga_prvaGaraza">Vlaga: 60%</string>
    <string name="tlak_prvaGaraza">Atmosferski tlak: 1012.05 hPa</string>
    <string name="kvaliteta_zraka_prvaGaraza">Kvaliteta zraka: DOBRA</string>
    <string name="vlaga_drugaGaraza">Vlaga: 64%</string>
    <string name="tlak_drugaGaraza">Atmosferski tlak: 1011.91 hPa</string>
    <string name="kvaliteta_zraka_drugaGaraza">Kvaliteta zraka: DOBRA</string>
    <string name="adresa_trecaGaraza">Adresa: Selačka ulita 12, Zagreb</string>
    <string name="broj_mjesta_trecaGaraza">Ukupan broj mjesta: 14</string>
    <string name="rezervirana_mjesta_trecaGaraza">Broj slobodnih mjesta: 4</string>
    <string name="temp_trecaGaraza">Temperatura: 20</string>
    <string name="vlaga_trecaGaraza">Vlaga: 67%</string>
    <string name="tlak_trecaGaraza">Atmosferski tlak: 1010.75 hPa</string>
    <string name="kvaliteta_zraka_trecaGaraza">Kvaliteta zraka: ODLIČNA</string>
</resources>