<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_simple"
    tools:context=".GarazaVoltino">

    <TextView
        android:id="@+id/broj_mjesta_trecaGaraza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="484dp"
        android:gravity="center"
        android:text="@string/broj_mjesta_trecaGaraza"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adresa_trecaGaraza"
        app:layout_constraintVertical_bias="0.74" />

    <TextView
        android:id="@+id/vlaga_trecaGaraza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:gravity="center"
        android:text="@string/vlaga_trecaGaraza"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp_trecaGaraza"
        app:layout_constraintVertical_bias="0.734" />

    <TextView
        android:id="@+id/temp_trecaGaraza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="352dp"
        android:gravity="center"
        android:text="@string/temp_trecaGaraza"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rezervirana_mjesta_trecaGaraza"
        app:layout_constraintVertical_bias="0.555" />

    <TextView
        android:id="@+id/kvaliteta_zraka_trecaGaraza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:gravity="center"
        android:text="@string/kvaliteta_zraka_trecaGaraza"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlak_trecaGaraza"
        app:layout_constraintVertical_bias="0.925" />

    <TextView
        android:id="@+id/tlak_trecaGaraza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="232dp"
        android:gravity="center"
        android:text="@string/tlak_trecaGaraza"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vlaga_trecaGaraza"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/adresa_trecaGaraza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/adresa_trecaGaraza"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194" />

    <TextView
        android:id="@+id/rezervirana_mjesta_trecaGaraza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="420dp"
        android:gravity="center"
        android:text="@string/rezervirana_mjesta_trecaGaraza"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/broj_mjesta_trecaGaraza"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/odjava_trecaGaraza"
        android:layout_width="152dp"
        android:layout_height="69dp"
        android:layout_marginBottom="48dp"
        android:text="@string/natrag"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:background="@drawable/custom_rounded_corners"
        app:backgroundTint="@color/design_default_color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/trecaGarazaNaslov"
        android:layout_width="303dp"
        android:layout_height="53dp"
        android:gravity="center"
        android:text="@string/treca_garaza_tekst"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

</androidx.constraintlayout.widget.ConstraintLayout>