<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_simple"
    tools:context=".Index">

    <Button
        android:id="@+id/buttonLoginIndex"
        android:layout_width="156dp"
        android:layout_height="68dp"
        android:layout_marginTop="32dp"
        android:text="@string/prijava"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:backgroundTint="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogin" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opis_prijave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"/>

    <Button
        android:id="@+id/buttonRegistrationIndex"
        android:layout_width="175dp"
        android:layout_height="62dp"
        android:layout_marginTop="28dp"
        android:text="@string/registracija"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:backgroundTint="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRegistration" />

    <TextView
        android:id="@+id/textRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/opis_registracije"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginIndex" />

    <ImageView
        android:id="@+id/slika_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/contentDescription_slika"
        app:layout_constraintBottom_toTopOf="@+id/textLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/garaza_slika"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>