<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background_simple"
    tools:context=".MainActivity"
    tools:ignore="MissingClass">

    <Button
        android:id="@+id/trecaGaraza"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:fontFamily="sans-serif-medium"
        android:text="@string/treca_garaza_tekst"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/googleMapsButton_Main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drugaGaraza"
        app:layout_constraintVertical_bias="0.339" />

    <Button
        android:id="@+id/drugaGaraza"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:fontFamily="sans-serif-medium"
        android:text="@string/druga_garaza_tekst"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prvaGaraza"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/prvaGaraza"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:fontFamily="sans-serif-medium"
        android:text="@string/prva_garaza_tekst"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <Button
        android:id="@+id/odjava_Main"
        android:layout_width="173dp"
        android:layout_height="81dp"
        app:backgroundTint="@color/design_default_color_primary"
        android:text="@string/odjava"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drugaGaraza"
        app:layout_constraintVertical_bias="0.852" />

    <Button
        android:id="@+id/googleMapsButton_Main"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:fontFamily="sans-serif-medium"
        android:text="@string/lokacije_garaza"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/odjava_Main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drugaGaraza"
        app:layout_constraintVertical_bias="0.803" />

</androidx.constraintlayout.widget.ConstraintLayout>
